Added tests and upgraded dependencies